specs/001-typescript-to-zig-native/examples/invalid/dynamic-property-write.ts
let user = { id: 1 };
user["name"] = "Ada";
